[ADDED] added NMsg.ofStyledXYZ helper methods