@@ -5,6 +5,7 @@
  */
 package net.thevpc.nuts.lib.doc.executor;
 
+import net.thevpc.nuts.io.NPath;
 import net.thevpc.nuts.lib.doc.context.NDocContext;
 import net.thevpc.nuts.lib.doc.processor.NDocStreamExecutor;
 import net.thevpc.nuts.lib.doc.util.FileProcessorUtils;
@@ -14,8 +15,6 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.io.UncheckedIOException;
 import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 
 /**
  *
@@ -35,13 +34,13 @@ public class StreamToExecutor implements NDocExecutor {
     }
 
     @Override
-    public void processPath(Path source, String mimeType, NDocContext context) {
+    public void processPath(NPath source, String mimeType, NDocContext context) {
         String p = context.getPathTranslator().translatePath(source.toString());
         if (p != null) {
-            Path targetPath = Paths.get(p);
+            NPath targetPath = NPath.of(p);
             FileProcessorUtils.mkdirs(targetPath.getParent());
-            try (InputStream in = Files.newInputStream(source);
-                    OutputStream out = Files.newOutputStream(targetPath);) {
+            try (InputStream in = source.getInputStream();
+                    OutputStream out = targetPath.getOutputStream();) {
 //                context.getLog().debug(context.getContextName(), "update "+p+" (from "+source+") using "+streamProcessor);
                 context.setVar("source",p);
                 context.setVar("target",targetPath);
